force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/RecordSpecifically__c.field-meta.xml
<CustomField>
    <fullName>RecordSpecifically__c</fullName>
    <description>특기 사항</description>
    <label>특기 사항</label>
    <length>255</length>
    <type>Text</type>
</CustomField>