force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/RecoveryCollateralRatio__c.field-meta.xml
<CustomField>
    <fullName>RecoveryCollateralRatio__c</fullName>
    <formula>100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>회수 담보율</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>