force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/RentalSafeBoxNo__c.field-meta.xml
<CustomField>
    <fullName>RentalSafeBoxNo__c</fullName>
    <description>대여 금고 번호</description>
    <label>대여 금고 번호</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>