force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/RetentionPeriod__c.field-meta.xml
<CustomField>
    <fullName>RetentionPeriod__c</fullName>
    <description>보관일</description>
    <label>보관일</label>
    <type>Date</type>
</CustomField>