force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/RoomsForRent__c.field-meta.xml
<CustomField>
    <fullName>RoomsForRent__c</fullName>
    <description>임대 방수</description>
    <label>임대 방수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>