force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/SecurityAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>SecurityAgreementDate__c</fullName>
    <description>질권 설정 계약일</description>
    <label>질권 설정 계약일</label>
    <type>Date</type>
</CustomField>