force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/SecurityDeposit__c.field-meta.xml
<CustomField>
    <fullName>SecurityDeposit__c</fullName>
    <description>임대차 내역 - 보증금</description>
    <label>임대차 내역 - 보증금</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>