force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/SubEncumbrance__c.field-meta.xml
<CustomField>
    <fullName>SubEncumbrance__c</fullName>
    <description>등기부상 권리 내역 - 기등기 / 가처분</description>
    <label>등기부상 권리 내역 - 기등기 / 가처분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>유</fullName>
            </value>
            <value>
                <fullName>무</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>