force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/SubjectLocation__c.field-meta.xml
<CustomField>
    <fullName>SubjectLocation__c</fullName>
    <description>대상물 소재지 구분</description>
    <label>대상물 소재지 구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>서울시</fullName>
            </value>
            <value>
                <fullName>과밀억제권역,용인,세종,화성</fullName>
            </value>
            <value>
                <fullName>광역시,안산,김포,광주,파주</fullName>
            </value>
            <value>
                <fullName>그 밖의 지역</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>