force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/SupplierAppraisalCost__c.field-meta.xml
<CustomField>
    <fullName>SupplierAppraisalCost__c</fullName>
    <description>거래처 지원 - 감정비</description>
    <label>거래처 지원 - 감정비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>