force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/SupplierSupportBudget__c.field-meta.xml
<CustomField>
    <fullName>SupplierSupportBudget__c</fullName>
    <description>거래처 지원 - 설정비</description>
    <label>거래처 지원 - 설정비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>