force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/SupplierSupportFee__c.field-meta.xml
<CustomField>
    <fullName>SupplierSupportFee__c</fullName>
    <description>거래처 지원 - 수수료</description>
    <label>거래처 지원 - 수수료</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>