force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/TotalCollateralAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalCollateralAmount__c</fullName>
    <description>총 담보금액</description>
    <label>총 담보금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>