force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/TotalEncumbrances__c.field-meta.xml
<CustomField>
    <fullName>TotalEncumbrances__c</fullName>
    <description>등기부상 권리 내역 - 합계</description>
    <label>등기부상 권리 내역 - 합계</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>