force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/TotalLeaseHistory__c.field-meta.xml
<CustomField>
    <fullName>TotalLeaseHistory__c</fullName>
    <description>임대차 내역 - 합계</description>
    <label>임대차 내역 - 합계</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>