force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/TotalRooms__c.field-meta.xml
<CustomField>
    <fullName>TotalRooms__c</fullName>
    <description>방 총수</description>
    <label>방 총수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>