force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/TotalSeniorDebt__c.field-meta.xml
<CustomField>
    <fullName>TotalSeniorDebt__c</fullName>
    <description>선순위 금액 합계</description>
    <label>선순위 금액 합계</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>