force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/UnregisteredBuilding__c.field-meta.xml
<CustomField>
    <fullName>UnregisteredBuilding__c</fullName>
    <description>미등기 건축물</description>
    <label>미등기 건축물</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>유</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>