force-app/main/default/objects/CJFW_CollateralEnrollment__c/recordTypes/Bond.recordType-meta.xml
<RecordType>
    <fullName>Bond</fullName>
    <active>true</active>
    <label>Bond</label>
</RecordType>