force-app/main/default/objects/CJFW_CollateralEnrollment__c/recordTypes/Cash.recordType-meta.xml
<RecordType>
    <fullName>Cash</fullName>
    <active>true</active>
    <label>Cash</label>
</RecordType>