force-app/main/default/objects/CJFW_CollateralEnrollment__c/recordTypes/GuaranteeInsurance.recordType-meta.xml
<RecordType>
    <fullName>GuaranteeInsurance</fullName>
    <active>true</active>
    <label>GuaranteeInsurance</label>
</RecordType>