force-app/main/default/objects/CJFW_CollateralEnrollment__c/recordTypes/JointGuarantee.recordType-meta.xml
<RecordType>
    <fullName>JointGuarantee</fullName>
    <active>false</active>
    <label>JointGuarantee</label>
</RecordType>