force-app/main/default/objects/CJFW_CollateralEnrollment__c/recordTypes/RealEstate.recordType-meta.xml
<RecordType>
    <fullName>RealEstate</fullName>
    <active>true</active>
    <label>RealEstate</label>
</RecordType>