force-app/main/default/objects/CJFW_CollateralEnrollment__c/recordTypes/TimeDeposit.recordType-meta.xml
<RecordType>
    <fullName>TimeDeposit</fullName>
    <active>true</active>
    <label>TimeDeposit</label>
</RecordType>