force-app/main/default/objects/CJFW_CollateralEnrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Customer__c</columns>
    <columns>CollateralType__c</columns>
    <columns>CollateralNo__c</columns>
    <columns>Category__c</columns>
    <columns>RetentionPeriod__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CJFW_CollateralEnrollment__c.GuaranteeInsurance</value>
    </filters>
    <label>모두</label>
</ListView>